--- a/dist.ini
+++ b/dist.ini
@@ -3,4 +3,6 @@ author  = Michael Schout <mschout@cpan.org>
 license = Perl_5
 copyright_holder = Michael Schout
 
-[@MSCHOUT]
+[@Filter]
+bundle = @MSCHOUT
+remove = PodCoverageTests
