change to a PluginBundle
The bundle both generates the Apache::Test enabled Makefile.PL, as well
as uses Dist::Zilla::Plugin::DynamicPrereqs to require the appropriate
mod_perl module.

This means you need to be using [@ApacheTest] instead of [ApacheTest]

--- a/dist.ini
+++ b/dist.ini
@@ -6,3 +6,7 @@ copyright_holder = Michael Schout
 [@Filter]
 bundle = @MSCHOUT
 remove = PodCoverageTests
+
+[Prereqs]
+Dist::Zilla::Plugin::DynamicPrereqs = 0
+
