enable Twitter dzil plugin

--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,9 @@ license = Perl_5
 copyright_holder = Michael Schout
 
 [@Filter]
-bundle = @MSCHOUT
-remove = PodCoverageTests
+-bundle = @MSCHOUT
+-remove = PodCoverageTests
+option = use_twitter
 
 [Prereqs]
 Dist::Zilla::Plugin::DynamicPrereqs = 0
