Enable Travis testing

--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,15 @@
-name    = Dist-Zilla-Plugin-ApacheTest
-author  = Michael Schout <mschout@cpan.org>
-license = Perl_5
+name             = Dist-Zilla-Plugin-ApacheTest
+main_module      = lib/Dist/Zilla/PluginBundle/ApacheTest.pm
+author           = Michael Schout <mschout@cpan.org>
+license          = Perl_5
 copyright_holder = Michael Schout
 
 [@Filter]
 -bundle = @MSCHOUT
 -remove = PodCoverageTests
-option = use_twitter
+use_twitter = 1
 
 [Prereqs]
 Dist::Zilla::Plugin::DynamicPrereqs = 0
 
+[TravisYML]
