--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 language: perl
 perl:
+   - 'blead'
    - '5.24'
    - '5.22'
    - '5.20'
@@ -12,6 +13,7 @@ perl:
    - '5.8'
 matrix:
    allow_failures:
+      - perl: 'blead'
       - perl: '5.8'
    fast_finish: true
 before_install:
