update dzil config, let dzil generate signature test

--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,10 @@ author           = Michael Schout <mschout@cpan.org>
 license          = Perl_5
 copyright_holder = Michael Schout
 
-[@Filter]
--bundle = @MSCHOUT
+[@MSCHOUT]
 -remove = PodCoverageTests
 use_twitter = 1
+use_travis = 1
 
 [Prereqs]
 Dist::Zilla::Plugin::DynamicPrereqs = 0
-
-[TravisYML]
